--- a/stores/templates/stores/customerProfile.html
+++ b/stores/templates/stores/customerProfile.html
@@ -68,10 +68,10 @@
                     </div><br>
                     <div>
                         <div class="profile-information7" style="display: flex; align-items: flex-start; margin-left: 10px; margin-right: 0px;">
-                            <label for="id_address" style="flex-grow: 1;">Address:</label>
+                            <!-- <label for="id_address" style="flex-grow: 1;">Address:</label>
                             <div class="form7" style="width: 120px; padding-bottom: 0px;"></div>
                                 {{ form.address }}
-                            </div><br>
+                            </div><br> -->
                             <div class="button-position" style="text-align: center;">
                                 <a href="{% url 'customerProfile' %}"><input type="submit" value="Save" class="btn btn-success"></a>
                             </div>
