--- a/stores/templates/stores/add_customer_profile.html
+++ b/stores/templates/stores/add_customer_profile.html
@@ -41,12 +41,12 @@
                 {{ profile_form.phone_number }}
             </div>
         </div>
-        <div class="profile-information7" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
+        <!-- <div class="profile-information7" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
             <label for="id_address" style="flex-grow: 1;">Address:</label>
             <div class="form7" style="width: 80px; height: 290px; padding-bottom: 0px;"></div>
                 {{ profile_form.address }}
             </div>
-        </div>
+        </div> -->
         <div class="profile-information8" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
             <label for="id_gender" style="margin-right: 10px; padding-bottom: 40px; flex-grow: 1;">Gender:</label>
             <div class="form8" style="width: 430px;">
