--- a/stores/templates/stores/add_customer_profile.html
+++ b/stores/templates/stores/add_customer_profile.html
@@ -47,9 +47,45 @@
                 {{ profile_form.address }}
             </div>
         </div> -->
-        <div class="profile-information8" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
+        <div class="profile-information7" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
+            <label for="id_country" style="flex-grow: 1; padding-bottom: 40px">Country:</label>
+            <div class="form7" style="width: 430px">
+                {{ profile_form.country }}
+            </div>
+        </div>
+        <div class="profile-information8" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
+            <label for="id_province" style="flex-grow: 1; padding-bottom: 40px">Province:</label>
+            <div class="form8" style="width: 430px">
+                {{ profile_form.province }}
+            </div>
+        </div>
+        <div class="profile-information9" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
+            <label for="id_city" style="flex-grow: 1; padding-bottom: 40px">City:</label>
+            <div class="form9" style="width: 430px">
+                {{ profile_form.city }}
+            </div>
+        </div>
+        <div class="profile-information10" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
+            <label for="id_district" style="flex-grow: 1; padding-bottom: 40px">District:</label>
+            <div class="form10" style="width: 430px">
+                {{ profile_form.district }}
+            </div>
+        </div>
+        <div class="profile-information11" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
+            <label for="id_postal_code" style="flex-grow: 1; padding-bottom: 40px">Postal Code:</label>
+            <div class="form11" style="width: 430px">
+                {{ profile_form.postal_code }}
+            </div>
+        </div>
+        <div class="profile-information12" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
+            <label for="id_street" style="flex-grow: 1; padding-bottom: 40px">Street Name:</label>
+            <div class="form12" style="width: 430px">
+                {{ profile_form.street }}
+            </div>
+        </div>
+        <div class="profile-information13" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
             <label for="id_gender" style="margin-right: 10px; padding-bottom: 40px; flex-grow: 1;">Gender:</label>
-            <div class="form8" style="width: 430px;">
+            <div class="form13" style="width: 430px;">
                 {{ profile_form.gender }}
             </div>
         </div>
